--- a/vignettes/spatialFDA.bib
+++ b/vignettes/spatialFDA.bib
@@ -71,14 +71,14 @@
     number = {6},
     pages = {1--42},
   }
-  
+
  @Manual{refund2024,
     title = {refund: Regression with Functional Data},
     author = {Jeff Goldsmith and Fabian Scheipl and Lei Huang and Julia Wrobel and Chongzhi Di and Jonathan Gellar and Jaroslaw Harezlak and Mathew W. McLean and Bruce Swihart and Luo Xiao and Ciprian Crainiceanu and Philip T. Reiss and Erjia Cui},
     year = {2024},
     note = {R package version 0.1-35},
   }
-  
+
   @book{ramsayFunctionalDataAnalysis2009,
   title = {Functional {{Data Analysis}} with {{R}} and {{MATLAB}}},
   author = {Ramsay, James and Hooker, Giles and Graves, Spencer},
@@ -92,4 +92,14 @@
   author={Pebesma, Edzer and Bivand, Roger},
   year={2023},
   publisher={Chapman and Hall/CRC}
+}
+
+@article{wood2016Smoothing,
+  author = {Simon N. Wood, Natalya Pya and Benjamin Säfken},
+  title = {Smoothing Parameter and Model Selection for General Smooth Models},
+  journal = {Journal of the American Statistical Association},
+  year = {2016},
+  publisher = {ASA Website}
+  }
+
 }
